# MultiVariateRNG

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1.cxx  example2.cxx
src/: MultiVariRNG.cxx  MultiVariRNG.h
